# aoc-2025

./: .gitignore  aoc2025.cabal  devenv.nix
1/: Main.hs  a.hs  b.hs
10/: a.hs
11/: a.hs  b.hs
2/: a.hs  b.hs
3/: a.hs  b.hs
4/: a.hs  b.hs
5/: a.hs  b.hs
6/: a.hs  b.hs
7/: a.hs  b.hs
8/: a.hs  b.hs
9/: a.hs
