cabal-version:      3.4
name:               aoc2025
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             mfroeh
maintainer:         mfroeh0@pm.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable 1a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   1
    default-language: GHC2024

executable 1b
    import:           warnings
    main-is:          b.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   1
    default-language: GHC2024

executable 2a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0,split
    hs-source-dirs:   2
    default-language: GHC2024

executable 2b
    import:           warnings
    main-is:          b.hs
    build-depends:    base ^>=4.20.2.0,split
    hs-source-dirs:   2
    default-language: GHC2024
