cabal-version:      3.4
name:               aoc2025
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             mfroeh
maintainer:         mfroeh0@pm.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable 1a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   1
    default-language: GHC2024

executable 1b
    import:           warnings
    main-is:          b.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   1
    default-language: GHC2024

executable 2a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0,split
    hs-source-dirs:   2
    default-language: GHC2024

executable 2b
    import:           warnings
    main-is:          b.hs
    build-depends:    base ^>=4.20.2.0,split
    hs-source-dirs:   2
    default-language: GHC2024

executable 3a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   3
    default-language: GHC2024

executable 3b
    import:           warnings
    main-is:          b.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   3
    default-language: GHC2024

executable 4a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   4
    default-language: GHC2024

executable 4b
    import:           warnings
    main-is:          b.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   4
    default-language: GHC2024

executable 5a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0,split
    hs-source-dirs:   5
    default-language: GHC2024

executable 5b
    import:           warnings
    main-is:          b.hs
    build-depends:    base ^>=4.20.2.0,split
    hs-source-dirs:   5
    default-language: GHC2024

executable 6a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0,split
    hs-source-dirs:   6
    default-language: GHC2024

executable 6b
    import:           warnings
    main-is:          b.hs
    build-depends:    base ^>=4.20.2.0,split
    hs-source-dirs:   6
    default-language: GHC2024

executable 7a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   7
    default-language: GHC2024

executable 7b
    import:           warnings
    main-is:          b.hs
    build-depends:    base ^>=4.20.2.0,data-memocombinators
    ghc-options: -O2 -Wall
    hs-source-dirs:   7
    default-language: GHC2024

executable 8a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0,split
    hs-source-dirs:   8
    default-language: GHC2024

executable 8b
    import:           warnings
    main-is:          b.hs
    build-depends:    base ^>=4.20.2.0,split
    hs-source-dirs:   8
    default-language: GHC2024

executable 9a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0,split
    hs-source-dirs:   9
    default-language: GHC2024

executable 11a
    import:           warnings
    main-is:          a.hs
    build-depends:    base ^>=4.20.2.0,split,unordered-containers,hashable
    hs-source-dirs:   11
    default-language: GHC2024

executable 11b
    import:           warnings
    main-is:          b.hs
    ghc-options: -O2 -Wall
    build-depends:    base ^>=4.20.2.0,split,unordered-containers,hashable,data-memocombinators
    hs-source-dirs:   11
    default-language: GHC2024
